# docs-en

./: .auditignore  .gitignore  .readthedocs.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  edit-es.json  edit_es.json  edit_zh.json  flexcyon.css  index.html  mkdocs.yml  modifiers-alt-file-tree.css  modifiers-banner.css  modifiers-base-icons.css  modifiers.css  note.md  package-lock.json  package.json  pyproject.toml  remove_deps.txt  requirements.txt  sanity_check.py  serve.py  setup.py  site-reqs.txt  sitemap.xml  tags.json  test.scss  translate.py  translation_cache_es.json  translation_cache_zh.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy_es.yml  deploy_langs.yml  deploy_zh-cn.yml  deploy_zh.yml  translate_markdown.yml
README/: index.html
README/license/: index.html
README/page-1/: index.html
README/page-2/: index.html
README/page-3/: index.html
Styling/: index.html
changelogs/: index.html
credits/: index.html
docs/: .readthedocs.yaml  README.md  index.md  mkdocs.yml  requirements.txt
docs/en/: index.md  (+2 more)
hugo-site/: Makefile  go.mod  go.sum  hugo.toml
old_py_stuff/: main.py  mkdocs.yml
scripts/: audit_links.py  compare_translations.py  translate_frontmatter.py  update_nav_blocks.py
search/: search_index.json
tags/: index.html
translation/: .gitignore  index.md  requirements.txt
translation-es/: LICENSE  README.md  index.md  mkdocs.yml
translation-zh/: .readthedocs.yaml  README.md  index.md  mkdocs.yml
translation-zh-cn/: .gitignore  README.md  requirements.txt
zh/: index.html
(+2224 files in other folders)
